[metadata]
name = reahl
version = 6.1.1
author = Iwan Vosloo
author_email = iwan@reahl.org
description = The Reahl web framework.
long_description = file: README.md
license_files = LICENSE.reahl
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options.packages.find]
exclude = etc, build, dist

[options.extras_require]
all =
  reahl-component>=6.1,<6.2
  reahl-web>=6.1,<6.2
  reahl-mailutil>=6.1,<6.2
  reahl-sqlalchemysupport>=6.1,<6.2
  reahl-web-declarative>=6.1,<6.2
  reahl-domain>=6.1,<6.2
  reahl-domainui>=6.1,<6.2
  reahl-postgresqlsupport>=6.1,<6.2
  reahl-sqlitesupport>=6.1,<6.2
  reahl-mysqlsupport>=6.1,<6.2
  reahl-dev>=6.1,<6.2
  reahl-webdev>=6.1,<6.2
  reahl-webdriver>=6.1,<6.2
  reahl-browsertools>=6.1,<6.2
  reahl-stubble>=6.1,<6.2
  reahl-tofu>=6.1,<6.2
  reahl-doc>=6.1,<6.2
  reahl-commands>=6.1,<6.2
  reahl-paypalsupport>=6.1,<6.2
web =
  reahl-component>=6.1,<6.2
  reahl-web>=6.1,<6.2
  reahl-mailutil>=6.1,<6.2
sqlite = reahl-sqlitesupport>=6.1,<6.2
postgresql = reahl-postgresqlsupport>=6.1,<6.2
mysql = reahl-mysqlsupport>=6.1,<6.2
declarative =
  reahl-sqlalchemysupport>=6.1,<6.2
  reahl-web-declarative>=6.1,<6.2
  reahl-domain>=6.1,<6.2
  reahl-domainui>=6.1,<6.2
dev =
  reahl-dev>=6.1,<6.2
  reahl-webdev>=6.1,<6.2
  reahl-stubble>=6.1,<6.2
  reahl-tofu>=6.1,<6.2
  reahl-webdriver>=6.1,<6.2
  reahl-browsertools>=6.1,<6.2
doc = reahl-doc>=6.1,<6.2
component =
  reahl-component>=6.1,<6.2
browsertools =
  reahl-browsertools>=6.1,<6.2
stubble =
  reahl-stubble>=6.1,<6.2
tofu =
  reahl-tofu>=6.1,<6.2

[options]
packages = find_namespace:

