[metadata]
name = reahl
version = 7.0.0
author = Iwan Vosloo
author_email = iwan@reahl.org
description = The Reahl web framework.
long_description = file: README.md
license_files = LICENSE.reahl
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3

[options.packages.find]
exclude = etc, build, dist

[options.extras_require]
all =
  reahl-component>=7.0,<7.1
  reahl-web>=7.0,<7.1
  reahl-mailutil>=7.0,<7.1
  reahl-sqlalchemysupport>=7.0,<7.1
  reahl-web-declarative>=7.0,<7.1
  reahl-domain>=7.0,<7.1
  reahl-domainui>=7.0,<7.1
  reahl-postgresqlsupport>=7.0,<7.1
  reahl-sqlitesupport>=7.0,<7.1
  reahl-mysqlsupport>=7.0,<7.1
  reahl-dev>=7.0,<7.1
  reahl-webdev>=7.0,<7.1
  reahl-webdriver>=7.0,<7.1
  reahl-browsertools>=7.0,<7.1
  reahl-stubble>=7.0,<7.1
  reahl-tofu>=7.0,<7.1
  reahl-doc>=7.0,<7.1
  reahl-commands>=7.0,<7.1
  reahl-paypalsupport>=7.0,<7.1
web =
  reahl-component>=7.0,<7.1
  reahl-web>=7.0,<7.1
  reahl-mailutil>=7.0,<7.1
sqlite = reahl-sqlitesupport>=7.0,<7.1
postgresql = reahl-postgresqlsupport>=7.0,<7.1
mysql = reahl-mysqlsupport>=7.0,<7.1
declarative =
  reahl-sqlalchemysupport>=7.0,<7.1
  reahl-web-declarative>=7.0,<7.1
  reahl-domain>=7.0,<7.1
  reahl-domainui>=7.0,<7.1
dev =
  reahl-dev>=7.0,<7.1
  reahl-webdev>=7.0,<7.1
  reahl-stubble>=7.0,<7.1
  reahl-tofu>=7.0,<7.1
  reahl-webdriver>=7.0,<7.1
  reahl-browsertools>=7.0,<7.1
doc = reahl-doc>=7.0,<7.1
component =
  reahl-component>=7.0,<7.1
browsertools =
  reahl-browsertools>=7.0,<7.1
stubble =
  reahl-stubble>=7.0,<7.1
tofu =
  reahl-tofu>=7.0,<7.1

[options]
packages = find_namespace:

