[options]
component =
  {
    "versions": {
      "5.2": {},
      "5.1": {
        "install_requires": [
          "lxml>=4.2,<4.5.999",
          "WebTest>=2.0,<2.0.999",
          "selenium>=2.42,<3.141.9999",
          "setuptools>=32.3.1"
        ]
      },
      "5.0": {
        "install_requires": [
          "reahl-web>=5.0,<5.1",
          "reahl-dev>=5.0,<5.1",
          "reahl-component>=5.0,<5.1",
          "reahl-tofu>=5.0,<5.1",
          "reahl-domain>=5.0,<5.1",
          "lxml>=4.2,<4.5.999",
          "WebTest>=2.0,<2.0.999",
          "selenium>=2.42,<3.141.9999",
          "watchdog>=0.8.3,<0.10.999",
          "setuptools>=32.3.1",
          "WebOb>=1.8,<1.8.999",
          "prompt_toolkit>=2.0.10,<2.0.999"
        ]
      },
      "4.0": {
        "install_requires": [
          "reahl-web>=4.0,<4.1",
          "reahl-dev>=4.0,<4.1",
          "reahl-component>=4.0,<4.1",
          "reahl-tofu>=4.0,<4.1",
          "reahl-domain>=4.0,<4.1",
          "lxml>=4.2,<4.2.999",
          "WebTest>=2.0,<2.0.999",
          "selenium>=2.42,<2.9999",
          "watchdog>=0.8.3,<0.8.999.3",
          "setuptools>=32.3.1",
          "webob>=1.4,<1.4.999"
        ]
      },
      "3.2": {
        "install_requires": [
          "reahl-web>=3.2,<3.3",
          "reahl-dev>=3.2,<3.3",
          "reahl-component>=3.2,<3.3",
          "reahl-tofu>=3.2,<3.3",
          "reahl-domain>=3.2,<3.3",
          "lxml>=3.3,<3.3.999",
          "WebTest>=2.0,<2.0.999",
          "selenium>=2.42,<2.9999",
          "watchdog>=0.8.3,<0.8.999.3"
        ]
      },
      "3.1": {
        "install_requires": [
          "reahl-web>=3.1,<3.2",
          "reahl-dev>=3.1,<3.2",
          "reahl-component>=3.1,<3.2",
          "reahl-tofu>=3.1,<3.2",
          "reahl-domain>=3.1,<3.2",
          "lxml>=3.3,<3.3.999",
          "WebTest>=2.0,<2.0.999",
          "selenium>=2.42,<2.42.999"
        ]
      },
      "3.0": {
        "install_requires": [
          "reahl-web>=3.0,<3.1",
          "reahl-dev>=3.0,<3.1",
          "reahl-component>=3.0,<3.1",
          "reahl-tofu>=3.0,<3.1",
          "lxml>=3.3,<3.3.999",
          "WebTest>=2.0,<2.0.999",
          "selenium>=2.42,<2.42.999"
        ]
      },
      "2.1": {
        "install_requires": [
          "reahl-web>=2.1,<2.2",
          "reahl-dev>=2.1,<2.2",
          "reahl-component>=2.1,<2.2",
          "reahl-tofu>=2.1,<2.2",
          "lxml>=3.2",
          "WebTest>=1.4,<1.5",
          "selenium>=2.25,<2.27"
        ]
      },
      "2.0": {
        "install_requires": [
          "reahl-web>=2.0,<2.1",
          "reahl-dev>=2.0,<2.1",
          "reahl-component>=2.0,<2.1",
          "reahl-tofu>=2.0,<2.1",
          "lxml>=3.2",
          "WebTest>=1.4,<1.5",
          "selenium>=2.25,<2.27"
        ]
      }
    }
  }

[options.package_data]
  * = 
    */LC_MESSAGES/*.mo


