[metadata]
name = reahl-browsertools
version = 6.1.1
author = Iwan Vosloo
author_email = iwan@reahl.org
description = An alternative API for working with Selenium and WebTest.
long_description = file: README.rst
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Testing
  Environment :: Web Environment

[options.packages.find]
exclude = etc, build, dist

[options]
packages = find_namespace:

install_requires =
  lxml>=4.2,<4.9.999
  WebTest>=2.0,<3.0.999
  selenium>=2.42,<4.7.9999

tests_require =
  pytest>=3.0
  reahl-tofu
  reahl-stubble
  reahl-doc
  reahl-postgresqlsupport


