[build-system]
requires = [
  "setuptools >= 68",
  "wheel",
  "setuptools-git >= 1.1",
  "pytest-runner",
  "toml",
  "reahl-component-metadata >= 7.0.0"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "reahl-commands"
version = "7.0.0"
description = "The component framework of Reahl."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Software Development"
  ]
dependencies = [
  "reahl-component>=7.0,<7.1"
  ]
authors = [ 
  {name = "Iwan Vosloo", email = "iwan@reahl.org"},
  {name = "Craig Sparks", email = "craig@reahl.org"}
]

[project.entry-points."reahl.component.commands"]
  CreateDBUser = "reahl.commands.prodshell:CreateDBUser"
  DropDBUser = "reahl.commands.prodshell:DropDBUser"
  CreateDB = "reahl.commands.prodshell:CreateDB"
  DropDB = "reahl.commands.prodshell:DropDB"
  BackupDB = "reahl.commands.prodshell:BackupDB"
  RestoreDB = "reahl.commands.prodshell:RestoreDB"
  BackupAllDB = "reahl.commands.prodshell:BackupAllDB"
  RestoreAllDB = "reahl.commands.prodshell:RestoreAllDB"
  SizeDB = "reahl.commands.prodshell:SizeDB"
  RunJobs = "reahl.commands.prodshell:RunJobs"
  CreateDBTables = "reahl.commands.prodshell:CreateDBTables"
  DropDBTables = "reahl.commands.prodshell:DropDBTables"
  MigrateDB = "reahl.commands.prodshell:MigrateDB"
  DiffDB = "reahl.commands.prodshell:DiffDB"
  ListConfig = "reahl.commands.prodshell:ListConfig"
  CheckConfig = "reahl.commands.prodshell:CheckConfig"
  ListDependencies = "reahl.commands.prodshell:ListDependencies"
  ListVersionHistory = "reahl.commands.prodshell:ListVersionHistory"
  ExportStaticFiles = "reahl.commands.prodshell:ExportStaticFiles"
  ComponentInfo = "reahl.commands.prodshell:ComponentInfo"

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component.versions."6.1"]
dependencies = [
  "reahl-component>=6.1,<6.2"
  ]

[tool.reahl-component.versions."6.0"]
dependencies = [
  "reahl-component>=6.0,<6.1"
  ]

[tool.reahl-component.versions."5.2"]
dependencies = [
  "reahl-component>=5.2,<5.3"
  ]

[tool.reahl-component.versions."5.1"]
dependencies = [
  "reahl-component>=5.1,<5.2"
  ]

[tool.reahl-component.versions."5.0"]
dependencies = [
  "reahl-component>=5.0,<5.1"
  ]

[tool.reahl-component.versions."4.0"]
dependencies = [
  "reahl-component>=4.0,<4.1"
  ]
migrations = [
  "reahl.commands.migrations:ReahlCommandsReahlSchemaInitialise"
  ]
