[options]
tests_require =
  pytest>=3.0
  reahl-tofu
  reahl-stubble

component = 
  [versions.'6.0']
  install_requires = [
    "reahl-component>=6.0,<6.1"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-component>=5.1,<5.2"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-component>=5.0,<5.1"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-component>=4.0,<4.1"
  ]
  migrations = [
    "reahl.commands.migrations:ReahlCommandsReahlSchemaInitialise"
  ]
  

[options.entry_points]
reahl.component.commands = 
  CreateDBUser = reahl.commands.prodshell:CreateDBUser
  DropDBUser = reahl.commands.prodshell:DropDBUser
  CreateDB = reahl.commands.prodshell:CreateDB
  DropDB = reahl.commands.prodshell:DropDB
  BackupDB = reahl.commands.prodshell:BackupDB
  RestoreDB = reahl.commands.prodshell:RestoreDB
  BackupAllDB = reahl.commands.prodshell:BackupAllDB
  RestoreAllDB = reahl.commands.prodshell:RestoreAllDB
  SizeDB = reahl.commands.prodshell:SizeDB
  RunJobs = reahl.commands.prodshell:RunJobs
  CreateDBTables = reahl.commands.prodshell:CreateDBTables
  DropDBTables = reahl.commands.prodshell:DropDBTables
  MigrateDB = reahl.commands.prodshell:MigrateDB
  DiffDB = reahl.commands.prodshell:DiffDB
  ListConfig = reahl.commands.prodshell:ListConfig
  CheckConfig = reahl.commands.prodshell:CheckConfig
  ListDependencies = reahl.commands.prodshell:ListDependencies
  ListVersionHistory = reahl.commands.prodshell:ListVersionHistory
  ExportStaticFiles = reahl.commands.prodshell:ExportStaticFiles
  ComponentInfo = reahl.commands.prodshell:ComponentInfo

