[metadata]
name = reahl-commands
version = 6.1.1
author = Iwan Vosloo
author_email = iwan@reahl.org
description = The component framework of Reahl.
long_description = file: README.rst
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Environment :: Console
  Topic :: Software Development
  
[options.packages.find]
exclude = etc, build, dist

[options]
packages = find_namespace:

install_requires =
  reahl-component>=6.1,<6.2

tests_require =
  pytest>=3.0
  reahl-tofu
  reahl-stubble

component = 
  [versions.'6.0']
  install_requires = [
    "reahl-component>=6.0,<6.1"
  ]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-component>=5.1,<5.2"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-component>=5.0,<5.1"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-component>=4.0,<4.1"
  ]
  migrations = [
    "reahl.commands.migrations:ReahlCommandsReahlSchemaInitialise"
  ]
  

[options.entry_points]
reahl.component.commands = 
  CreateDBUser = reahl.commands.prodshell:CreateDBUser
  DropDBUser = reahl.commands.prodshell:DropDBUser
  CreateDB = reahl.commands.prodshell:CreateDB
  DropDB = reahl.commands.prodshell:DropDB
  BackupDB = reahl.commands.prodshell:BackupDB
  RestoreDB = reahl.commands.prodshell:RestoreDB
  BackupAllDB = reahl.commands.prodshell:BackupAllDB
  RestoreAllDB = reahl.commands.prodshell:RestoreAllDB
  SizeDB = reahl.commands.prodshell:SizeDB
  RunJobs = reahl.commands.prodshell:RunJobs
  CreateDBTables = reahl.commands.prodshell:CreateDBTables
  DropDBTables = reahl.commands.prodshell:DropDBTables
  MigrateDB = reahl.commands.prodshell:MigrateDB
  DiffDB = reahl.commands.prodshell:DiffDB
  ListConfig = reahl.commands.prodshell:ListConfig
  CheckConfig = reahl.commands.prodshell:CheckConfig
  ListDependencies = reahl.commands.prodshell:ListDependencies
  ListVersionHistory = reahl.commands.prodshell:ListVersionHistory
  ExportStaticFiles = reahl.commands.prodshell:ExportStaticFiles
  ComponentInfo = reahl.commands.prodshell:ComponentInfo

