[options.entry_points]
  distutils.setup_keywords = 
    component = reahl.componentmetadata.setuptools:setup_keyword
  dist_info.writers = 
    reahl-component.toml = reahl.componentmetadata.setuptools:dist_info
  egg_info.writers = 
    reahl-component.toml = reahl.componentmetadata.setuptools:dist_info
