[metadata]
name = reahl-component-metadata
version = 6.1.1
author = Iwan Vosloo
author_email = iwan@reahl.org
description = Plugin for build tools to be able to write reahl-component metadata.
long_description = file: README.rst
license_file = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Build Tools

[options.packages.find]
exclude = etc, build, dist

[options]
packages = find_namespace:

install_requires =
  toml

