[metadata]
name = reahl-component-metadata
version = 7.0.0
author = Iwan Vosloo
author_email = iwan@reahl.org
description = Plugin for build tools to be able to write reahl-component metadata.
long_description = file: README.rst
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Build Tools

[options.packages.find]
exclude = etc, build, dist

[options]
packages = find_namespace:

install_requires =
  toml

[options.entry_points]
  distutils.setup_keywords = 
    component = reahl.componentmetadata.setuptools:setup_keyword
  dist_info.writers = 
    reahl-component.toml = reahl.componentmetadata.setuptools:dist_info
  egg_info.writers = 
    reahl-component.toml = reahl.componentmetadata.setuptools:dist_info