[build-system]
requires = [
  "setuptools >= 68",
  "wheel",
  "setuptools-git >= 1.1",
  "pytest-runner",
  "toml",
  "reahl-component-metadata >= 7.0.0"
  ]
build-backend = "setuptools.build_meta"

[project]
name = "reahl-component"
version = "7.0.0"
description = "The component framework of Reahl."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools"
  ]
dependencies = [
  "Babel>=2.1,<2.12.999",
  "python-dateutil>=2.8,<2.8.999",
  "wrapt>=1.11.0,<1.15.999",
  "setuptools>=51.0.0",
  "pip>=21.1",
  "cached-property>=1.5,<1.5.999;python_version<'3.8'",
  "toml"
  ]
authors = [ 
  {name = "Iwan Vosloo", email = "iwan@reahl.org"},
  {name = "Craig Sparks", email = "craig@reahl.org"}
]

[project.optional-dependencies]
test = [
  "pytest>=3.0",
  "graphviz",
  "reahl-tofu",
  "reahl-stubble",
  "reahl-dev",
  "reahl-sqlalchemysupport",
  "reahl-sqlitesupport",
  "reahl-mysqlsupport"
  ]

[project.entry-points."reahl.translations"]
reahl-component = "reahl.messages"

[project.entry-points.console_scripts]
reahl = "reahl.component.shelltools:ReahlCommandline.execute_one"

[project.entry-points."reahl.component.commands"]
AddAlias = "reahl.component.shelltools:AddAlias"
RemoveAlias = "reahl.component.shelltools:RemoveAlias"

[project.entry-points."reahl.component.databasecontrols"]
NullDatabaseControl = "reahl.component.dbutils:NullDatabaseControl"

[tool.setuptools.packages.find]
exclude = ["etc", "build", "dist"]

[tool.reahl-component.versions."6.1"]
dependencies = []

[tool.reahl-component.versions."6.0"]

[tool.reahl-component.versions."5.2"]

[tool.reahl-component.versions."5.1"]

[tool.reahl-component.versions."5.0"]

[tool.reahl-component.versions."4.0"]

[tool.reahl-component.versions."3.2"]

[tool.reahl-component.versions."3.1"]

[tool.reahl-component.versions."3.0"]

[tool.reahl-component.versions."2.1"]

[tool.reahl-component.versions."2.0"]
