[options]
component = 
  [tool.reahl-component]
  [versions.'5.2']
  install_requires = [
    "Babel>=2.1,<2.9.999",
    "python-dateutil>=2.8,<2.8.999",
    "wrapt>=1.11.0,<1.13.999",
    "setuptools>=32.3.1",
    "pip>=10.0.0"
  ]
  [versions.'5.1']
  install_requires = [
    "Babel>=2.1,<2.8.999",
    "python-dateutil>=2.8,<2.8.999",
    "wrapt>=1.11.0,<1.12.999",
    "setuptools>=32.3.1",
    "pip>=10.0.0"
  ]
  [versions.'5.0']
  install_requires = [
    "Babel>=2.1,<2.8.999",
    "python-dateutil>=2.8,<2.8.999",
    "wrapt>=1.11.0,<1.12.999",
    "setuptools>=32.3.1",
    "pip>=10.0.0"
  ]
  [versions.'4.0']
  install_requires = [
    "six",
    "Babel>=2.1,<2.1.999",
    "python-dateutil>=2.2,<2.2.999",
    "wrapt>=1.10.2,<1.10.999",
    "setuptools>=32.3.1",
    "pip>=10.0.0"
  ]
  [versions.'3.2']
  install_requires = [
    "six",
    "Babel>=2.1,<2.1.999",
    "python-dateutil>=2.2,<2.2.999",
    "wrapt>=1.10.2,<1.10.999"
  ]
  [versions.'3.1']
  install_requires = [
    "six",
    "Babel>=2.1,<2.1.999",
    "python-dateutil>=2.2,<2.2.999",
    "wrapt>=1.10.2,<1.10.999"
  ]
  [versions.'3.0']
  install_requires = [
    "six",
    "Babel>=1.3,<1.3.9999",
    "python-dateutil>=2.2,<2.2.999",
    "decorator>=3.4,<3.4"
  ]
  [versions.'2.1']
  install_requires = [
    "six",
    "Babel>=0.9,<0.10",
    "python-dateutil>=1.5,<1.6",
    "decorator>=3.4,<3.4"
  ]
  [versions.'2.0']
  install_requires = [
    "Babel>=0.9,<0.10",
    "python-dateutil>=1.5,<1.6",
    "decorator>=3.4,<3.4"
  ]
  

[options.entry_points]
reahl.translations = 
  reahl-component = reahl.messages
console_scripts = 
  reahl = reahl.component.shelltools:ReahlCommandline.execute_one
reahl.component.commands = 
  AddAlias = reahl.component.shelltools:AddAlias
  RemoveAlias = reahl.component.shelltools:RemoveAlias
reahl.component.databasecontrols = 
  NullDatabaseControl = reahl.component.dbutils:NullDatabaseControl

[options.package_data]
* = 
  */LC_MESSAGES/*.mo

