[options]
tests_require =
  pytest>=3.0
  graphviz
  contextvars
  reahl-tofu
  reahl-stubble
  reahl-dev
  reahl-sqlalchemysupport
  reahl-sqlitesupport
  reahl-mysqlsupport

component = 
  [versions.'6.0']
  [versions.'5.2']
  [versions.'5.1']
  [versions.'5.0']
  [versions.'4.0']
  [versions.'3.2']
  [versions.'3.1']
  [versions.'3.0']
  [versions.'2.1']
  [versions.'2.0']
  

[options.entry_points]
reahl.translations = 
  reahl-component = reahl.messages
console_scripts = 
  reahl = reahl.component.shelltools:ReahlCommandline.execute_one
reahl.component.commands = 
  AddAlias = reahl.component.shelltools:AddAlias
  RemoveAlias = reahl.component.shelltools:RemoveAlias
reahl.component.databasecontrols = 
  NullDatabaseControl = reahl.component.dbutils:NullDatabaseControl

[options.package_data]
* = 
  */LC_MESSAGES/*.mo

