[metadata]
name = reahl-component
version = 7.0.0
author = Iwan Vosloo
author_email = iwan@reahl.org
description = The component framework of Reahl.
long_description = file: README.rst
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: Reahl
  Intended Audience :: Developers
  License :: OSI Approved
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Build Tools
  
[options.packages.find]
exclude = etc, build, dist

[options.extras_require]
test =
  pytest>=3.0
  graphviz
  reahl-tofu
  reahl-stubble
  reahl-dev
  reahl-sqlalchemysupport
  reahl-sqlitesupport
  reahl-mysqlsupport

[options]
packages = find_namespace:

install_requires =
  Babel>=2.1,<2.11.999
  python-dateutil>=2.8,<2.8.999
  wrapt>=1.11.0,<1.14.999
  setuptools>=51.0.0
  pip>=21.1
  cached-property>=1.5,<1.5.999;python_version<"3.8"
  toml

component = 
  [versions.'6.1']
  install_requires = [
    
  ]
  [versions.'6.0']
  [versions.'5.2']
  [versions.'5.1']
  [versions.'5.0']
  [versions.'4.0']
  [versions.'3.2']
  [versions.'3.1']
  [versions.'3.0']
  [versions.'2.1']
  [versions.'2.0']
  

[options.entry_points]
reahl.translations = 
  reahl-component = reahl.messages
console_scripts = 
  reahl = reahl.component.shelltools:ReahlCommandline.execute_one
reahl.component.commands = 
  AddAlias = reahl.component.shelltools:AddAlias
  RemoveAlias = reahl.component.shelltools:RemoveAlias
reahl.component.databasecontrols = 
  NullDatabaseControl = reahl.component.dbutils:NullDatabaseControl

[options.package_data]
* = 
  */LC_MESSAGES/*.mo

