[options]
component = 
  [tool.reahl-component]
  [versions.'5.2']
  install_requires = [
    "reahl-component>=5.2,<5.3",
    "reahl-tofu>=5.2,<5.3",
    "reahl-stubble>=5.2,<5.3",
    "Babel>=2.1,<2.9.999",
    "twine>=1.15.0,<3.8.9999",
    "wheel>=0.34.0",
    "tzlocal>=2.0.0,<4.1.9999",
    "setuptools>=32.3.1",
    "pip>=10.0.0"
  ]
  [versions.'5.1']
  install_requires = [
    "reahl-component>=5.1,<5.2",
    "reahl-tofu>=5.1,<5.2",
    "reahl-stubble>=5.1,<5.2",
    "Babel>=2.1,<2.8.999",
    "twine>=1.15.0,<3.1.9999",
    "wheel>=0.34.0,<0.34.9999",
    "tzlocal>=2.0.0,<2.0.9999",
    "setuptools>=32.3.1",
    "pip>=10.0.0"
  ]
  [versions.'5.0']
  install_requires = [
    "reahl-component>=5.0,<5.1",
    "reahl-tofu>=5.0,<5.1",
    "reahl-stubble>=5.0,<5.1",
    "Babel>=2.1,<2.8.999",
    "twine>=1.15.0,<3.1.9999",
    "wheel>=0.34.0,<0.34.9999",
    "tzlocal>=2.0.0,<2.0.9999",
    "setuptools>=32.3.1",
    "pip>=10.0.0"
  ]
  [versions.'4.0']
  install_requires = [
    "reahl-component>=4.0,<4.1",
    "reahl-tofu>=4.0,<4.1",
    "reahl-stubble>=4.0,<4.1",
    "six",
    "Babel>=2.1,<2.1.999",
    "twine>=1.11.0,<1.11.9999",
    "wheel>=0.29.0,<0.29.9999",
    "tzlocal>=1.2.0,<1.2.9999",
    "setuptools>=32.3.1",
    "pip>=10.0.0"
  ]
  [versions.'3.2']
  install_requires = [
    "reahl-component>=3.2,<3.3",
    "reahl-tofu>=3.2,<3.3",
    "reahl-bzrsupport>=3.2,<3.3",
    "Babel>=2.1,<2.1.999",
    "twine>=1.4.0,<1.4.9999",
    "wheel>=0.24.0,<0.24.9999"
  ]
  [versions.'3.1']
  install_requires = [
    "reahl-component>=3.1,<3.2",
    "reahl-tofu>=3.1,<3.2",
    "reahl-bzrsupport>=3.1,<3.2",
    "Babel>=2.1,<2.1.999",
    "twine>=1.4.0,<1.4.9999",
    "wheel>=0.24.0,<0.24.9999"
  ]
  [versions.'3.0']
  install_requires = [
    "reahl-component>=3.0,<3.1",
    "reahl-tofu>=3.0,<3.1",
    "reahl-bzrsupport>=3.0,<3.1",
    "Babel>=1.3,<1.3.9999"
  ]
  [versions.'2.1']
  install_requires = [
    "reahl-component>=2.1,<2.2",
    "reahl-tofu>=2.1,<2.2",
    "reahl-bzrsupport>=2.1,<2.2",
    "Babel>=0.9,<0.10"
  ]
  [versions.'2.0']
  install_requires = [
    "reahl-component>=2.0,<2.1",
    "reahl-tofu>=2.0,<2.1",
    "reahl-bzrsupport>=2.0,<2.1",
    "Babel>=0.9,<0.10"
  ]
  

[options.entry_points]
reahl.component.commands = 
  Refresh = reahl.dev.devshell:Refresh
  ExplainLegend = reahl.dev.devshell:ExplainLegend
  List = reahl.dev.devshell:List
  Select = reahl.dev.devshell:Select
  ClearSelection = reahl.dev.devshell:ClearSelection
  ListSelections = reahl.dev.devshell:ListSelections
  Save = reahl.dev.devshell:Save
  Read = reahl.dev.devshell:Read
  DeleteSelection = reahl.dev.devshell:DeleteSelection
  Shell = reahl.dev.devshell:Shell
  Setup = reahl.dev.devshell:Setup
  Build = reahl.dev.devshell:Build
  Sign = reahl.dev.devshell:Sign
  ListMissingDependencies = reahl.dev.devshell:ListMissingDependencies
  DebInstall = reahl.dev.devshell:DebInstall
  Upload = reahl.dev.devshell:Upload
  MarkReleased = reahl.dev.devshell:MarkReleased
  SubstVars = reahl.dev.devshell:SubstVars
  Debianise = reahl.dev.devshell:Debianise
  Info = reahl.dev.devshell:Info
  ExtractMessages = reahl.dev.devshell:ExtractMessages
  MergeTranslations = reahl.dev.devshell:MergeTranslations
  CompileTranslations = reahl.dev.devshell:CompileTranslations
  AddLocale = reahl.dev.devshell:AddLocale
  UpdateAptRepository = reahl.dev.devshell:UpdateAptRepository
  ServeSMTP = reahl.dev.mailtest:ServeSMTP
  UpdateCopyright = reahl.dev.devshell:UpdateCopyright
  MigrateReahlProject = reahl.dev.devshell:MigrateReahlProject

